# cargo-ci-template.rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build-tarball-win.sh  build-tarball.sh  cliff.toml  git-cliff.toml  git-cliff.toml.bak  mise.toml  release-please-config.json  release-plz.toml  release.sh  release.toml  release.yml
.github/workflows/: build-nightly.yml  build-nightly.yml.bak  build.yml  build.yml.bak  cargo-release.yml  manual-build.yml  manual-build.yml.bak  manual-nightly.yml  nightly.yml  release-please.yml  release-please.yml.bak  release-preview.yml  release-tag.yml  release.yml  upload-rust-binary-build.yml
cargo-ci-template-cli/: Cargo.toml  release.toml
cargo-ci-template-cli/src/: main.rs
cargo-ci-template-core/: Cargo.toml
cargo_ci_template_cli/: Cargo.toml  release.toml
cargo_ci_template_core/: Cargo.toml  release.toml
cargo_ci_template_core/src/: lib.rs
src/: main.rs
