[workspace]
members = ["cargo_ci_template_cli", "cargo_ci_template_core"]
resolver = "2"

[workspace.package]
name = "cargo-ci-template"
version = "1.0.1"
edition = "2021"
rust-version = "1.74.0"
authors = ["Lin Rongbin <linrongbin16@outlook.com>"]
description = "Cargo CI template."
repository = "https://github.com/linrongbin16/cargo-ci-template.rs"
readme = "README.md"
homepage = "https://github.com/linrongbin16/cargo-ci-template.rs"
documentation = "https://docs.rs/cargo-ci-template.rs"
license = "GPL-3.0"
keywords = ["cargo", "ci"]

[workspace.dependencies]
cargo_ci_template_core = { version = "1.0.1", path = "./cargo_ci_template_core" }
crossterm = "0.28"

[profile.release]
lto = "thin"

[profile.nightly]
inherits = "release"
debug = true
