[workspace]
members = ["cargo-ci-template-cli", "cargo-ci-template-core"]
resolver = "2"

[workspace.package]
version = "1.0.2"
edition = "2021"
rust-version = "1.74.0"
authors = ["Lin Rongbin <linrongbin16@outlook.com>"]
description = "Cargo CI template."
repository = "https://github.com/linrongbin16/cargo-ci-template.rs"
readme = "README.md"
homepage = "https://github.com/linrongbin16/cargo-ci-template.rs"
documentation = "https://docs.rs/cargo-ci-template.rs"
license = "GPL-3.0"
keywords = ["cargo", "ci"]

[workspace.dependencies]
cargo-ci-template-core = { version = "1.0.2", path = "./cargo-ci-template-core" }
crossterm = "0.28"

[profile.release]
lto = "thin"

[profile.nightly]
inherits = "release"
debug = true
