[workspace]
members = ["cargo_ci_template_cli", "cargo_ci_template_core"]
resolver = "2"

[workspace.package]
version = "1.0.6-alpha.1"
edition = "2024"
rust-version = "1.85.0"
authors = ["Lin Rongbin <linrongbin16@outlook.com>"]
description = "Cargo CI template."
repository = "https://github.com/linrongbin16/cargo-ci-template.rs"
readme = "README.md"
homepage = "https://github.com/linrongbin16/cargo-ci-template.rs"
documentation = "https://docs.rs/cargo-ci-template.rs"
license = "GPL-3.0"
keywords = ["cargo", "ci"]

[workspace.dependencies]
cargo_ci_template_core = { version = "1.0.6-alpha.1", path = "./cargo_ci_template_core" }
crossterm = "0.28"

[profile.release]
lto = "thin"

[profile.nightly]
inherits = "release"
debug = true
