[package]
name = "cargo-ci-template-core"                         # here use the root crate name
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
license.workspace = true
keywords.workspace = true
description = "The core library for cargo-ci-template."

[dependencies]
crossterm = { workspace = true }
